@@ -40,12 +40,6 @@
  *
  */
 
-typedef enum {
-  GNOME_THEME_METACITY = 1 << 0,
-  GNOME_THEME_GTK_2 = 1 << 1,
-  GNOME_THEME_GTK_2_KEYBINDING = 1 << 2
-} GnomeThemeElement;
-
 typedef struct _ThemeCallbackData
 {
   ThemeChangedCallback func;
