@@ -1,3 +1,9 @@
+20007-11-12  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gnome-theme-info.c:
+	* gnome-theme-info.h: re-added GnomeThemeElement to the "public" API,
+	since it's used in gnome-theme-test.
+
 2007-11-11  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c:
